--- a/style.css
+++ b/style.css
@@ -45,3 +45,24 @@
     background-color: cyan;
     height: 5vh;
 }
+
+
+
+/*****************
+ * MOBILE DESIGN *
+ *****************/
+
+/* ************PHONE************ */
+@media screen and (max-width: 700px) {
+	.main-section{
+        height: 45vh;
+        flex-direction: column;
+        justify-content:space-around;
+        align-items: center;
+    }
+    .sub-main {
+        width: 90%;
+        height: 45%;
+    }
+    
+}
