--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+:root {
+    --color1: #fcba04;
+    --color2: #a50104;
+    --color3: #590004;
+    --color4: #250001;
+    --color5: #0b090a;
+    --color6: #f3f3f3;
+    --color7: #8d99ae;
+  }
+
 * {
     margin: 0px;
     padding: 0px;
@@ -7,8 +17,12 @@
  * STATIC TOP BAR *
  ******************/
 #header {
-    background-color: blue;
+    background-color: var(--color5);
     height: 5vh;
+}
+h1 {
+    color: var(--color1);
+    -webkit-text-stroke: 1px var(--color2);
 }
 
 /************************
@@ -19,20 +33,27 @@
     display: flex;
     justify-content: space-evenly;
 }
+h3 {
+    color: var(--color1);
+    /* -webkit-text-stroke: 1px var(--color1); */
+}
 
 #top {
-    background-color: blueviolet;
+    background-color: var(--color7);
 
 }
 #bottom {
-    background-color: chartreuse;
+    background-color: var(--color3);
 }
 
 .sub-main {
     width: 45%;
+    /* display: flex;
+    flex-direction:column ; */
 }
 .left-side {
-    background-color: darkmagenta;
+    /* background-color: darkmagenta; */
+    border: 1px solid var(--color1);
 }
 .right-side {
     background-color: darkolivegreen;
@@ -42,7 +63,7 @@
  * FOOTER/INFO AREA *
  ********************/
 #footer {
-    background-color: cyan;
+    background-color: var(--color1);
     height: 5vh;
 }
 
