--- a/style.css
+++ b/style.css
@@ -38,6 +38,10 @@ h3 {
 	/* -webkit-text-stroke: 1px var(--color1); */
 }
 
+.numInput {
+    width: 20px;
+}
+
 #top {
 	background-color: var(--color7);
 }
@@ -47,8 +51,9 @@ h3 {
 
 .sub-main {
 	width: 45%;
-	/* display: flex;
-    flex-direction:column ; */
+	display: flex;
+    flex-direction:column ;
+
 }
 .left-side {
 	/* background-color: darkmagenta; */
@@ -57,6 +62,7 @@ h3 {
 .right-side {
 	background-color: darkolivegreen;
 }
+
 
 /********************
  * FOOTER/INFO AREA *
@@ -73,7 +79,7 @@ h3 {
 /* ************PHONE************ */
 @media screen and (max-width: 700px) {
 	.main-section {
-		height: 45vh;
+		height: auto;
 		flex-direction: column;
 		justify-content: space-around;
 		align-items: center;
@@ -81,5 +87,6 @@ h3 {
 	.sub-main {
 		width: 90%;
 		height: 45%;
+        margin: 10px;
 	}
 }
