trying to figure out why items are dissapearing

--- a/style.css
+++ b/style.css
@@ -38,9 +38,9 @@ h3 {
 	/* -webkit-text-stroke: 1px var(--color1); */
 }
 
-.numInput {
+/* .numInput {
     width: 20px;
-}
+} */
 
 #top {
 	background-color: var(--color7);
