--- a/style.css
+++ b/style.css
@@ -98,7 +98,9 @@ h3 {
 /* intiative display section */
 #current-init {
 	width: 100%;
-	height: 90px;
+	height: auto;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
 
