--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
 h1 {
 	color: var(--color1);
 	-webkit-text-stroke: 1px var(--color2);
+	margin-left: 10px;
 }
 
 /************************
@@ -35,20 +36,18 @@ h1 {
 }
 h3 {
 	color: var(--color1);
-	/* -webkit-text-stroke: 1px var(--color1); */
+	margin-left: 7px;
+	margin-top: 3px;
 }
 
 .numInput {
     width: 20px;
 }
 
-#top {
+#top, #bottom {
 	background-color: var(--color7);
 }
 
-#bottom {
-	background-color: purple;
-}
 /* ****************** */
 /* Initiative section */
 /* ****************** */
@@ -63,6 +62,8 @@ h3 {
 	width: 100%;
 	height: 60px;
 	display: flex;
+	border: 1px solid var(--color5);
+	
 }
 #input {
 	width: 70%;
@@ -109,7 +110,6 @@ h3 {
 	width: 100%;
 	height: 30px;
 	display: flex;
-	background-color: red;
 }
 #next-button {
 	width: 85%;
@@ -125,6 +125,7 @@ h3 {
 	height: 100%;
 	background-color: var(--color6);
 	color: var(--color2);
+	min-height: 30px;
 }
 
 .button-o-doom {
@@ -136,19 +137,48 @@ h3 {
 }
 
 
+/* ****************** */
+/*** Damage section ***/
+/* ****************** */
 
+.dmg-section{
+	height: auto;
+	margin-top: 10px;
+
+}
+
+.dmg-section > label{
+	margin-left: 15px;
+}
+
+/* ****************** */
+/*** Score section ***/
+/* ****************** */
+
+
+#scoreBoardTable{
+    border-collapse: collapse;
+    /* margin: 25px 0; */
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+/* Larger/Global */
 .sub-main {
 	width: 45%;
 	display: flex;
     flex-direction:column ;
+	border: 1px solid var(--color5);
 
 }
 .left-side {
 	/* background-color: darkmagenta; */
-	border: 1px solid var(--color1);
+	background-color: var(--color1);
 }
 .right-side {
-	background-color: darkolivegreen;
+	background-color:var(--color1);
 }
 
 
