--- a/style.css
+++ b/style.css
@@ -182,6 +182,33 @@ h3 {
 	background-color:var(--color1);
 }
 
+#roll-output{
+	height: 30px;
+	display: flex;
+}
+
+#dice-arr{
+	height: 100%;
+	width: 50%;
+	text-align: center;
+}
+
+#mod-box{
+	height: 100%;
+	width: 25%;
+	text-align: center;
+	vertical-align: baseline;
+}
+#final-roll{
+	width: 25%;
+	text-align: center;
+}
+h2{
+	color: var(--color2);
+}
+p{
+	font-size: 10px;
+}
 
 /********************
  * FOOTER/INFO AREA *
@@ -224,7 +251,7 @@ h3 {
 		height: 45%;
         margin: 10px;
 	}
-	#top, #bottom {
+	/* #top, #bottom {
 	height: 100vw;
-	}
+	} */
 }
