if you don't like it... well i don't need you in my life

--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@
 	padding: 0px;
 	border: 0px;
 }
+body{
+	background-color: var(--color7);
+}
 
 /******************
  * STATIC TOP BAR *
@@ -158,12 +161,7 @@ h3 {
 
 
 #scoreBoardTable{
-    border-collapse: collapse;
-    /* margin: 25px 0; */
-    font-size: 0.9em;
-    font-family: sans-serif;
-    min-width: 400px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+	text-align: center;
 }
 
 /* Larger/Global */
@@ -228,6 +226,7 @@ p{
 #footer > a{
 	text-decoration: none;
     color: var(--color1) ;
+	margin-top: 13px;
 }
 #footer > button{	
     color: var(--color1) ;
